# aws-spot-advisor-sejto

./: MANIFEST.in  README.md  aws_spot_advisor_sejto.py  pyproject.toml  requirements-ci.txt
.github/workflows/: ci.yml  release.yml
ci/: run-flake8.sh
lib/: __init__.py  cli_args.py  dataset.py  filters.py  formatters.py  models.py
lib/tests/: test_cli_args.py  test_dataset.py  test_filters.py  test_formatters.py  test_models.py
src/aws_spot_advisor_sejto/: __init__.py  sejto.py
src/aws_spot_advisor_sejto/lib/: cli_args.py  conf.py  filters.py
tests/: conftest.py  test_sejto.py
tests/test_lib/: test_cli_args.py  test_dataset.py  test_filters.py  test_formatters.py  test_models.py
tests/test_lib/files/: test_spot_advisor.json
